# youtube-ai-intelligence

./: .gitignore  README.md  SUMMARY.md  main.py  pyproject.toml  setup_project_structure.py
configs/: channels.yaml  discovery_keywords.yaml
dags/: youtube_metadata_pipeline.py
data/bronze/metadata/source=channel/dt=2026-02-14/UC8butISFwT-Wl7EV0hUK0BQ/: _compacted.jsonl  _compaction_manifest.json
data/bronze/metadata/source=channel/dt=2026-02-14/UCVHFbqXqoYvEWM1Ddxl0QDg/: _compacted.jsonl  _compaction_manifest.json
data/bronze/metadata/source=channel/dt=2026-02-14/UC_x5XG1OV2P6uZZ5FSM9Ttw/: _compacted.jsonl  _compaction_manifest.json
docker/: Dockerfile.airflow  Dockerfile.spark  docker-compose.yml
docs/: architecture.md  docker-services.md  pipeline-details.md  project-overview.md  roadmap.md  setup.md
jobs/ingestion/: compact_bronze_metadata.py  fetch_channel_metadata.py  fetch_keyword_metadata.py
notebooks/: test.ipynb
prds/: stage1.md
tests/: test_channel_ingestion.py  test_compact_bronze.py  test_keyword_ingestion.py
utils/: config_loader.py  logging_utils.py  path_builder.py
